test/corpus/scenarios/complex_combined.txt
==================
Complex combined
==================

FILTER BY Keep.
FILTER OFF.

DATASET ACTIVATE DataSet1.

ADD FILES /FILE='DataSet1'
  /FILE='DataSet2'
  /IN=Sample.

GET
  /TEST
  /TEST.

COMMENT 1.

GET
  /TEST /* comment 2
  /TEST.

* Comment 3

---

(source_file
 (command
  (identifier)
  (subcommand
   (subidentifier)
   (arguments
    (variable)
   )
  )
  (end_of_command)
 )
 (command
  (identifier)
  (arguments
   (variable)
  )
  (end_of_command)
 )
 (command
  (identifier)
  (arguments
   (variable)
  )
  (end_of_command)
 )
 (command
  (identifier)
  (subcommand
   (subidentifier)
   (arguments
    (comparison)
    (string)
   )
  )
  (subcommand
   (subidentifier)
   (arguments
    (comparison)
    (string)
   )
  )
  (subcommand
   (subidentifier)
   (arguments
    (comparison)
    (variable)
   )
  )
  (end_of_command)
 )
 (command
  (identifier)
  (subcommand
   (subidentifier)
  )
  (subcommand
   (subidentifier)
  )
  (end_of_command)
 ) 
 (comment)
 (command
  (identifier)
  (subcommand
   (subidentifier)
  )
  (comment)
  (subcommand
   (subidentifier)
  )
  (end_of_command)
 )
  (comment)
) 
