test/corpus/scenarios/multiline_multi_subcommand_multi_command.txt
==================
Multi-line multi-subcommand command
==================

GET
  /TEST1
  /TEST2.

GET
  /TEST1
  /TEST2.

---

(source_file
 (command
  (identifier)
  (subcommand
   (subidentifier)
  )
  (subcommand
   (subidentifier)
  )
  (end_of_command)
 ) 
 (command
  (identifier)
  (subcommand
   (subidentifier)
  )
  (subcommand
   (subidentifier)
  )
  (end_of_command)
 ) 
)
